--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                  <a><span>Магазин</span></a>
                  <div> 
                      <a href="#">Що купувати</a>
-                     <a href="#">Всі предмети</a>
+                     <a href="https://kiradygina.github.io/yr6/">Всі предмети</a>
                      
           </div>
              </div>
