--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                  <a><span>Герої</span></a>
                  <div> 
                      <a href="https://kiradygina.github.io/yr2/">Що робити? </a>
-                     <a href="#">Яка роль у грі?</a>
+                     <a href="https://kiradygina.github.io/yr4/">Яка роль у грі?</a>
                    
           </div>
              </div>
